--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
 	"name": "fcc-learn-npm-package-json",
-	"author": "Pearl Denedo",
+	"author": {
+	"name": "Pearl Denedo"
+	},
 	"dependencies": {
 		"express": "^4.14.0"
 	},
